# senhub

./: .gitignore  README.md  senhub_ライブラリ仕様書.md  senhub基本設計.md  インストール.md  導入.md
.devcontainer/: devcontainer.json
arduino/Senhub/: Senhub.cpp  Senhub.h  library.properties
arduino/examples/SenhubDebug/: SenhubDebug.ino  secrets.h.example
arduino/examples/SenhubTest/: SenhubTest.ino
python/: README.md  pyproject.toml  test_senhub.py
python/senhub/: __init__.py  senhub.py
scripts/: gen-channel-keys.py  install-local.sh  install-production.sh  install.conf.example  make-arduino-release.sh  monitor.py  setup-db.sh
server/: .env.example  channels.yaml.example  config.py  db.py  main.py  requirements.txt  schema.sql  test_api.py  test_db.py
